datalogger/transceive/sms/backups/smsParse.log
  File "/KWH/datalogger/transceive/sms/smsParse.py", line 43
    num = re.compile(\r"[0-9]{10}")
                                  ^
SyntaxError: unexpected character after line continuation character
